<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/new_sheet" />
        <item
            android:id="@+id/nav_clear"
            android:title="@string/clear" />
        <item
            android:id="@+id/nav_save"
            android:title="@string/save" />
        <item
            android:id="@+id/nav_load"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/load" />

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
